Changed all ip/network variables to be handled at runtime through docker / compose, added defaults.